Basic navbar styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,12 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+
+  --theme-pink: #E089B7;
+  --theme-pale-pink: #DAC6C6;
+  --theme-light-purple: #BFAECF;
+  --theme-light-blue: #A5C7E4;
+  --theme-light-green: #A5C7E4;
 }
 
 @media (prefers-color-scheme: dark) {
