--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --theme-pink: #E089B7;
+  --theme-pink: 224 137 183;
   --theme-pale-pink: #DAC6C6;
   --theme-light-purple: #BFAECF;
   --theme-light-blue: #A5C7E4;
