--- a/styles/custom-fonts.css
+++ b/styles/custom-fonts.css
@@ -34,3 +34,10 @@
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+
+@font-face {
+  font-family: 'CooperHewitt';
+  src: url(fonts/CooperHewitt-Book.otf);
+  font-weight: normal;
+  font-style: normal;
+}
