Add mobile nav bar + a bunch of fixes

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,3 +23,15 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+
+.contentful-rich-text {
+  overflow-wrap: break-word;
+
+  & p {
+    padding-bottom: .7em;
+
+    &:last-child {
+      padding-bottom: 0px;
+    }
+  }
+}
