--- a/styles/custom-fonts.css
+++ b/styles/custom-fonts.css
@@ -33,6 +33,48 @@
   font-weight: normal;
 }
 
+@font-face {
+  font-family: 'BcSans';
+  src: url(fonts/BCSans-Regular.otf);
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'BcSans';
+  src: url(fonts/BCSans-Light.otf);
+  font-style: normal;
+  font-weight: lighter;
+}
+
+@font-face {
+  font-family: 'BcSans';
+  src: url(fonts/BCSans-LightItalic.otf);
+  font-style: italic;
+  font-weight: lighter;
+}
+
+@font-face {
+  font-family: 'BcSans';
+  src: url(fonts/BCSans-Italic.otf);
+  font-style: italic;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'BcSans';
+  src: url(fonts/BCSans-Bold.otf);
+  font-style: normal;
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'BcSans';
+  src: url(fonts/BCSans-Bold.otf);
+  font-style: italic;
+  font-weight: bold;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 
 @font-face {
